--- a/main.html
+++ b/main.html
@@ -10,7 +10,12 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+   <div>
+        My current favourite song is 
+        <a href="https://www.youtube.com/watch?v=JGwWNGJdvx8" target="_blank">
+            Shape of You
+        </a>
+    </div>
 </body>
 
 </html>
